--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                  <a class="" href="login.html"> Login/Register</a>
                </li>
                <li><a  href="cart.html">
-                 <i class="fas fa-cart-plus"></i> Cart
-                 <span class="badge badge-green">3</span>
+                 <i class="fas fa-cart-plus"></i> My Cart
+                 <span class="badge badge-green "> 3</span>
                </a></li>
              </ul>
            </div>
@@ -74,7 +74,7 @@
      </div>
     </nav>
     <main>
-      <section>
+      <section >
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -88,11 +88,11 @@
               <div class="carousel-caption" style="padding: -15px;">
                 <h3>New Collection</h3>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.  </p>
-                 <button class="btn btn-danger">READ MORE</button>
+                 <button class="btn btn-danger">SHOP NOW</button>
               </div>
             </div>
             <div class="carousel-item" style="background-color:#F6BC00;">
-              <img class="d-block w-100 img-responsive"  src="img/headphone.png" alt="Second slide"  height="700">
+              <img class="d-block w-100 img-responsive"   src="img/person-music.jpeg" alt="Second slide"  height="700">
               <div class="carousel-caption d-none d-md-block">
                 <h3>New Collection</h3>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.  </p>
@@ -126,72 +126,82 @@
           </a>
         </div>
       </section>
-      <section>
-        <br> <br>
-        <h2 class="text-center"><strong>PRODUCTS</strong></h2>
-        <br>
-        <div class="row" >
-          <div class="col-12 col-md-6 col-lg-4" style="padding: 0;margin: 0;">
-            <div class="card" >
-              <img class="card-img-top" src="img/electronics.jpg" alt="Card image cap" style="   display: block;width: 100%;">
-              <div style="margin-top:50%;position:absolute; padding-top:10px; padding-left: 30px;padding-right:30px; padding-bottom: 40px; background-color: #1E1E1E; opacity: 0.75;">
-                <h4 style="color:white;">Electronics</h4>
-                <p style="color:white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4" style="padding: 0;margin: 0;">
-            <div class="card"  >
-              <img class="card-img-top" src="img/clothing.jpg" alt="Card image cap" style="   display: block;width: 100%;">
-              <div style="margin-top:50%;position:absolute; padding-top:10px; padding-left: 30px;padding-right:30px; padding-bottom: 40px; background-color: #1E1E1E; opacity: 0.75;">
-                <h4 style="color:white;">Clothing</h4>
-                <p style="color:white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                 <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4" style="padding: 0;margin: 0;">
-            <div class="card"  >
-              <img class="card-img-top" src="img/sports.jpg" alt="Card image cap" style="   display: block;width: 100%;">
-              <div style="margin-top:50%;position:absolute; padding-top:10px; padding-left: 30px;padding-right:30px; padding-bottom: 40px; background-color: #1E1E1E; opacity: 0.75;">
-                <h4 style="color:white;">Sports</h4>
-                <p style="color:white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4" style="padding: 0;margin: 0;">
-            <div class="card"  >
-              <img class="card-img-top" src="img/auto.jpg" alt="Card image cap" style="   display: block;width: 100%;">
-              <div style="margin-top:50%;position:absolute; padding-top:10px; padding-left: 30px;padding-right:30px;  padding-bottom: 4px; background-color: #1E1E1E; opacity: 0.75;">
-                <h4 style="color:white;">Automotive</h4>
-                <p style="color:white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                 <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4" style="padding: 0;margin: 0;">
-            <div class="card">
-              <img class="card-img-top" src="img/beuaty.jpg" alt="Card image cap">
-              <div style="margin-top:50%;position:absolute; padding-top:10px; padding-left: 30px;padding-right:30px; padding-bottom: 4px; background-color: #1E1E1E; opacity: 0.75;">
-                <h4 style="color:white;">Beauty & Health</h4>
-                <p style="color:white;" >Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4" style="padding: 0;margin: 0;">
-            <div class="card">
-              <img class="card-img-top" src="img/toys.jpg" alt="Card image cap">
-              <div style="margin-top:50%;position:absolute; padding-top:10px; padding-left: 30px;padding-right:30px; padding-bottom: 5px; background-color: #1E1E1E; opacity: 0.75;">
-                <h4 style="color:white;">Toys, Kids & Baby</h4>
-                <p style="color:white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
-              </div>
-            </div>
-          </div>
-      </section>
+       <section>
+
+
+
+    <br> <br>
+    <h2 class="text-center"><strong>PRODUCTS</strong></h2>
+    <br>
+    <div class="row">
+    <div class="col-md-4">
+      <div class="card">
+        <img class="card-img-top" src="img/electronics.jpg" alt="Card image cap">
+        <div class="card-body" style="background-color: #1E1E1E; opacity: 0.75;">
+          <h5 class="card-title" style="color: white;">Electronics</h5>
+          <p class="card-text" style="color: white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+           <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card">
+        <img class="card-img-top" src="img/clothing.jpg" alt="Card image cap">
+        <div class="card-body" style="background-color: #1E1E1E; opacity: 0.75;">
+          <h5 class="card-title" style="color: white;">Clothing</h5>
+          <p class="card-text" style="color: white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+           <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card">
+        <img class="card-img-top" src="img/sports.jpg" alt="Card image cap">
+        <div class="card-body"  style="background-color: #1E1E1E; opacity: 0.75;">
+          <h5 class="card-title" style="color: white;">Sports</h5>
+          <p class="card-text" style="color: white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+           <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card">
+        <img class="card-img-top" src="img/auto.jpg" alt="Card image cap">
+        <div class="card-body" style="background-color: #1E1E1E; opacity: 0.75;">
+          <h5 class="card-title" style="color: white;">Automotive</h5>
+          <p class="card-text" style="color: white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card">
+        <img class="card-img-top" src="img/beuaty.jpg" alt="Card image cap">
+        <div class="card-body"  style="background-color: #1E1E1E; opacity: 0.75;">
+          <h5 class="card-title" style="color: white;">Beauty & Health</h5>
+          <p class="card-text" style="color: white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+           <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card" >
+        <img class="card-img-top" src="img/toys.jpg" alt="Card image cap">
+        <div class="card-body" style="background-color: #1E1E1E; opacity: 0.75;">
+          <h5 class="card-title" style="color: white;">Toys, Kids & Baby</h5>
+          <p class="card-text" style="color: white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+           <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+
+
+  </section>
       <section>
   	    <div class="container">
           <div class="col">
@@ -278,9 +288,9 @@
           <li><i class="fa fa-phone mr-2"></i> + 786-293-3272</li>
         </ul>
       </div>
-      <div class="col-12 copyright mt-3">
-        <p class="float-left">
-          <a href="#"><i class="fas fa-arrow-circle-up"></i></a>
+      <div class="col-12 copyright mt-3  " >
+        <p class="float-right">
+          <a href="#" class="green"><i class="fas fa-arrow-circle-up fa-3x"></i></a>
         </p>
       </div>
     </div>
