--- a/login.html
+++ b/login.html
@@ -88,7 +88,7 @@
 
   </nav>
 
-<main>
+<main class="wrap">
 	<div class="container">
     <div class="heading cf">
       <h3>Sign in to your account</h3>
@@ -130,38 +130,31 @@
 </main>
 <br>
 <footer class="text-light">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3 col-lg-4 col-xl-3">
-        <h5>About</h5>
-        <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-        <p class="mb-0">
-          Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
-        </p>
-      </div>
-
-      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
-        <h5>Informations</h5>
-        <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-        <ul class="list-unstyled">
-          <li><a href="">Link 1</a></li>
-          <li><a href="">Link 2</a></li>
-          <li><a href="">Link 3</a></li>
-          <li><a href="">Link 4</a></li>
-        </ul>
-      </div>
-
-      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
-        <h5>Others links</h5>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-lg-4 col-xl-3">
+          <h5>About</h5>
+          <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+          <p class="mb-0">
+            Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
+          </p>
+        </div>
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
+          <h5>Informations</h5>
+          <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+          <ul class="list-unstyled">
+            <li><a href="">Link 1</a></li>
+            <li><a href="">Link 2</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
+          <h5>Others links</h5>
         <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
         <ul class="list-unstyled">
           <li><a href="">Link 1</a></li>
           <li><a href="">Link 2</a></li>
-          <li><a href="">Link 3</a></li>
-          <li><a href="">Link 4</a></li>
         </ul>
       </div>
-
       <div class="col-md-4 col-lg-3 col-xl-3">
         <h5>Contact</h5>
         <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
@@ -171,16 +164,14 @@
           <li><i class="fa fa-phone mr-2"></i> + 786-293-3272</li>
         </ul>
       </div>
-      <div class="col-12 copyright mt-3">
-        <p class="float-left">
-          <a href="#"><i class="fas fa-arrow-circle-up"></i></a>
+      <div class="col-12 copyright mt-3  " >
+        <p class="float-right">
+          <a href="#" class="green"><i class="fas fa-arrow-circle-up fa-3x"></i></a>
         </p>
-
       </div>
-
     </div>
   </div>
-</footer>
+  </footer>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
