--- a/cart.html
+++ b/cart.html
@@ -32,7 +32,7 @@
                  <a class="" href="#"><i class="fas fa-user" aria-hidden="true"></i> My Account</a>
                </li>
                <li class="dropdown">
-                 <a class="" href="#"> Login/Register</a>
+                 <a class="" href="login.html"> Login/Register</a>
                </li>
 							 <li><a  href="cart.html">
                  <i class="fas fa-cart-plus"></i> Cart
@@ -90,11 +90,11 @@
 
 <main>
 
-	<div class="wrap heading-principal">
+	<div class="container wrap heading-principal">
 
   <div class="heading heading-principal">
     <h1>My cart</h1>
-    <a href="#" class="btn btn-secondary continue-shopping">Continue Shopping</a>
+    <a href="products.html" class="btn btn-secondary continue-shopping">Continue Shopping</a>
   </div>
   <div class="cart-shopping">
 <!--    <ul class="tableHead">
@@ -177,56 +177,48 @@
 </body>
 
 <footer class="text-light">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-3 col-lg-4 col-xl-3">
-				<h5>About</h5>
-				<hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-				<p class="mb-0">
-					Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
-				</p>
-			</div>
-
-			<div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
-				<h5>Informations</h5>
-				<hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-				<ul class="list-unstyled">
-					<li><a href="">Link 1</a></li>
-					<li><a href="">Link 2</a></li>
-					<li><a href="">Link 3</a></li>
-					<li><a href="">Link 4</a></li>
-				</ul>
-			</div>
-
-			<div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
-				<h5>Others links</h5>
-				<hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-				<ul class="list-unstyled">
-					<li><a href="">Link 1</a></li>
-					<li><a href="">Link 2</a></li>
-					<li><a href="">Link 3</a></li>
-					<li><a href="">Link 4</a></li>
-				</ul>
-			</div>
-
-			<div class="col-md-4 col-lg-3 col-xl-3">
-				<h5>Contact</h5>
-				<hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-				<ul class="list-unstyled">
-					<li><i class="fa fa-home mr-2"></i> Cube-US</li>
-					<li><i class="fa fa-envelope mr-2"></i> email@example.com</li>
-					<li><i class="fa fa-phone mr-2"></i> + 786-293-3272</li>
-				</ul>
-			</div>
-			<div class="col-12 copyright mt-3">
-				<p class="float-left">
-					<a href="#">Back to top</a>
-				</p>
-
-			</div>
-		</div>
-	</div>
-</footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-lg-4 col-xl-3">
+          <h5>About</h5>
+          <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+          <p class="mb-0">
+            Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
+          </p>
+        </div>
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
+          <h5>Informations</h5>
+          <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+          <ul class="list-unstyled">
+            <li><a href="">Link 1</a></li>
+            <li><a href="">Link 2</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
+          <h5>Others links</h5>
+        <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+        <ul class="list-unstyled">
+          <li><a href="">Link 1</a></li>
+          <li><a href="">Link 2</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4 col-lg-3 col-xl-3">
+        <h5>Contact</h5>
+        <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+        <ul class="list-unstyled">
+          <li><i class="fa fa-home mr-2"></i> Cube-US</li>
+          <li><i class="fa fa-envelope mr-2"></i> email@example.com</li>
+          <li><i class="fa fa-phone mr-2"></i> + 786-293-3272</li>
+        </ul>
+      </div>
+      <div class="col-12 copyright mt-3  " >
+        <p class="float-right">
+          <a href="#" class="green"><i class="fas fa-arrow-circle-up fa-3x"></i></a>
+        </p>
+      </div>
+    </div>
+  </div>
+  </footer>
 
 </div>
 
