--- a/products.html
+++ b/products.html
@@ -72,65 +72,14 @@
 				</div>
 			</div>
 		</nav>
-		<main>
-			<!---->
-			<section>
-				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-					<ol class="carousel-indicators">
-						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-					</ol>
-					<div class="carousel-inner" style="max-height: 600px !important;">
-						<div class="carousel-item active">
-							<img class="d-block w-100 img-responsive" src="img/mac.jpg" alt="First slide"  height="700">
-							<div class="carousel-caption" style="padding: -15px;">
-								<h3>New Collection</h3>
-								<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.  </p>
-								<button class="btn btn-danger">READ MORE</button>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img class="d-block w-100 img-responsive"  src="img/person-music.jpeg" alt="Second slide"  height="700">
-							<div class="carousel-caption d-none d-md-block">
-								<h3>New Collection</h3>
-								<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.  </p>
-								<button class="btn btn-danger">READ MORE</button>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img class="d-block w-100 img-responsive"  src="img/pesas.jpeg" alt="Second slide" height="700">
-							<div class="carousel-caption d-none d-md-block">
-								<h3>New Collection</h3>
-								<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-								<button class="btn btn-danger">READ MORE</button>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img class="d-block w-100 img-responsive"  src="img/cameras1100x700.png" alt="Second slide"  height="700">
-							<div class="carousel-caption d-none d-md-block">
-								<h3>New Collection</h3>
-								<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
-								<button class="btn btn-danger">READ MORE</button>
-							</div>
-						</div>
-					</div>
-					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</div>
-			</section>
-			<section>
+		<main >
+		
+			<section class="wrap" >
 				<br>
-				<div class="container">
-					<div class="heading cf">
+				<div class="container ">
+					<div class="">
 						<h3>Products</h3>
+						<hr>
 					</div>
 					<div class="row">
 						<div class="col">
@@ -204,91 +153,97 @@
 						</div>
 						<div class="col">
 							<div class="row">
-								<div class="col-12 col-md-6 col-lg-4">
-									<a href="details-product.html"><div class="card">
-										<img class="card-img-top" src="img/iphone.png" alt="Card image cap" width="400" height="200">
-										<div class="card-body">
-											<h5 class="card-title"><a href="product.html" title="View Product">Product title</a></h5>
-											<hr>
-											<div class="row">
-												<div class="col">
-													<p>99.00 $</p>
-												</div>
-											</div>
-										</div>
-									</div>
-								</a>
-							</div>
-							<div class="col-12 col-md-6 col-lg-4">
-								<div class="card">
-									<img class="card-img-top" src="img/headphones.jpg" alt="Card image cap"  width="400" height="200">
-									<div class="card-body">
-										<h5 class="card-title"><a href="product.html" title="View Product">Product title</a></h5>
-										<hr>
-										<div class="row">
-											<div class="col">
-												<p >99.00 $</p>
-											</div>
-										</div>
+					<div class="col-md-4">
+						<div class="card" style="width: 16rem;">
+							<img class="card-img-top" src="img/iphone.png" alt="Card image cap"  width="400" height="200">
+							<div class="card-body">
+								<h5 class="card-title"><a href="details-product.html" title="View Product">Product title</a></h5>
+								<hr>
+								<div class="row">
+									<div class="col">
+										<p >99.00 $</p>
 									</div>
 								</div>
 							</div>
-							<div class="col-12 col-md-6 col-lg-4">
-								<div class="card">
-									<img class="card-img-top" src="img/camera.jpg" alt="Card image cap" width="400" height="200">
-									<div class="card-body">
-										<h5 class="card-title"><a href="product.html" title="View Product">Product title</a></h5>
-										<hr>
-										<div class="row">
-											<div class="col">
-												<p class="">99.00 $</p>
-											</div>
-										</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="card" style="width: 16rem;">
+							<img class="card-img-top" src="img/headphones.jpg" alt="Card image cap"  width="400" height="200">
+							<div class="card-body">
+								<h5 class="card-title"><a href="details-product.html" title="View Product">Product title</a></h5>
+								<hr>
+								<div class="row">
+									<div class="col">
+										<p >99.00 $</p>
+									</div>
+								</div>
+								<div class="sticker sticker-new"></div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="card" style="width: 16rem;">
+							<img class="card-img-top" src="img/camera.jpg" alt="Card image cap"  width="400" height="200">
+							<div class="card-body">
+								<h5 class="card-title"><a href="product.html" title="View Product">Product title</a></h5>
+								<hr>
+								<div class="row">
+									<div class="col">
+										<p >99.00 $</p>
 									</div>
 								</div>
 							</div>
-							<div class="col-12 col-md-6 col-lg-4">
-								<div class="card">
-									<img class="card-img-top" src="img/disk.png" alt="Card image cap"  width="400" height="200">
-									<div class="card-body">
-										<h5 class="card-title"><a href="product.html" title="View Product">Product title</a></h5>
-										<hr>
-										<div class="row">
-											<div class="col">
-												<p >99.00 $</p>
-											</div>
-										</div>
+						</div>
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<div class="col-md-4">
+						<div class="card" style="width: 16rem;">
+							<img class="card-img-top" src="img/disk.png" alt="Card image cap"  width="400" height="200">
+							<div class="card-body">
+								<h5 class="card-title"><a href="details-product.html" title="View Product">Product title</a></h5>
+								<hr>
+								<div class="row">
+									<div class="col">
+										<p >99.00 $</p>
+									</div>
+
+								</div>
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="card" style="width: 16rem;">
+							<img class="card-img-top" src="img/laptop.jpeg" alt="Card image cap"  width="400" height="200">
+							<div class="card-body">
+								<h5 class="card-title"><a href="details-product.html" title="View Product">Product title</a></h5>
+								<hr>
+								<div class="row">
+									<div class="col">
+										<p >99.00 $</p>
 									</div>
 								</div>
 							</div>
-							<div class="col-12 col-md-6 col-lg-4">
-								<div class="card">
-									<img class="card-img-top" src="img/laptop.jpeg" alt="Card image cap"  width="400" height="200">
-									<div class="card-body">
-										<h5 class="card-title"><a href="product.html" title="View Product">Product title</a></h5>
-										<hr>
-										<div class="row">
-											<div class="col">
-												<p >99.00 $</p>
-											</div>
-										</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="card" style="width: 16rem;">
+							<img class="card-img-top" src="img/projectors.jpg" alt="Card image cap"  width="400" height="200">
+							<div class="card-body">
+								<h5 class="card-title"><a href="details-product.html" title="View Product">Product title</a></h5>
+								<hr>
+								<div class="row">
+									<div class="col">
+										<p >99.00 $</p>
 									</div>
 								</div>
 							</div>
-							<div class="col-12 col-md-6 col-lg-4">
-								<div class="card">
-									<img class="card-img-top" src="img/projectors.jpg" alt="Card image cap" width="400" height="200">
-									<div class="card-body">
-										<h5 class="card-title"><a href="product.html" title="View Product">Product title</a></h5>
-										<hr>
-										<div class="row">
-											<div class="col">
-												<p>99.00 $</p>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
+						</div>
+					</div>
+				</div>
 							<div class="col-12">
 								<nav aria-label="...">
 									<ul class="pagination" style="padding-top: 10px;">
@@ -317,52 +272,48 @@
 </main>
 </body>
 <footer class="text-light">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-3 col-lg-4 col-xl-3">
-				<h5>About</h5>
-				<hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-				<p class="mb-0">
-					Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
-				</p>
-			</div>
-			<div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
-				<h5>Informations</h5>
-				<hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-				<ul class="list-unstyled">
-					<li><a href="">Link 1</a></li>
-					<li><a href="">Link 2</a></li>
-					<li><a href="">Link 3</a></li>
-					<li><a href="">Link 4</a></li>
-				</ul>
-			</div>
-			<div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
-				<h5>Others links</h5>
-				<hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-				<ul class="list-unstyled">
-					<li><a href="">Link 1</a></li>
-					<li><a href="">Link 2</a></li>
-					<li><a href="">Link 3</a></li>
-					<li><a href="">Link 4</a></li>
-				</ul>
-			</div>
-			<div class="col-md-4 col-lg-3 col-xl-3">
-				<h5>Contact</h5>
-				<hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-				<ul class="list-unstyled">
-					<li><i class="fa fa-home mr-2"></i> Cube-US</li>
-					<li><i class="fa fa-envelope mr-2"></i> email@example.com</li>
-					<li><i class="fa fa-phone mr-2"></i> + 786-293-3272</li>
-				</ul>
-			</div>
-			<div class="col-12 copyright mt-3">
-				<p class="float-left">
-					<a href="#">Back to top</a>
-				</p>
-			</div>
-		</div>
-	</div>
-</footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-lg-4 col-xl-3">
+          <h5>About</h5>
+          <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+          <p class="mb-0">
+            Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
+          </p>
+        </div>
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
+          <h5>Informations</h5>
+          <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+          <ul class="list-unstyled">
+            <li><a href="">Link 1</a></li>
+            <li><a href="">Link 2</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
+          <h5>Others links</h5>
+        <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+        <ul class="list-unstyled">
+          <li><a href="">Link 1</a></li>
+          <li><a href="">Link 2</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4 col-lg-3 col-xl-3">
+        <h5>Contact</h5>
+        <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+        <ul class="list-unstyled">
+          <li><i class="fa fa-home mr-2"></i> Cube-US</li>
+          <li><i class="fa fa-envelope mr-2"></i> email@example.com</li>
+          <li><i class="fa fa-phone mr-2"></i> + 786-293-3272</li>
+        </ul>
+      </div>
+      <div class="col-12 copyright mt-3  " >
+        <p class="float-right">
+          <a href="#" class="green"><i class="fas fa-arrow-circle-up fa-3x"></i></a>
+        </p>
+      </div>
+    </div>
+  </div>
+  </footer>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
