cambio de color a verde, se agrega carousel index
se toco estilos

--- a/details-product.html
+++ b/details-product.html
@@ -34,9 +34,9 @@
                <li class="dropdown">
                  <a class="" href="login.html"> Login/Register</a>
                </li>
-               <li><a  href="cart.html">
+               <li style="background-color:#048949;"><a  href="cart.html">
                  <i class="fas fa-cart-plus"></i> Cart
-                 <span class="badge badge-green">3</span>
+                 <span class="badge badge-cart">10</span>
                </a></li>
 
 
@@ -143,14 +143,14 @@
 				<label>Quantity :</label>
 				<div class="input-group mb-3">
 						<div class="input-group-prepend">
-								<button type="button" class="quantity-left-minus btn btn-danger btn-number"  data-type="minus" data-field="">
-										<i class="fa fa-minus"></i>
+								<button type="button" class="quantity-left-minus btn btn-default btn-number"  data-type="minus" data-field="">
+										<strong>-</strong>
 								</button>
 						</div>
 						<input type="text" class="form-control"  id="quantity" name="quantity" min="1" max="100" value="1">
 						<div class="input-group-append">
-								<button type="button" class="quantity-right-plus btn btn-success btn-number" data-type="plus" data-field="">
-										<i class="fa fa-plus"></i>
+								<button type="button" class="quantity-right-plus btn btn-default btn-number" data-type="plus" data-field="">
+										<strong>+</strong>
 								</button>
 						</div>
 				</div>
