--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                <li class="dropdown">
                  <a class="" href="login.html"> Login/Register</a>
                </li>
-               <li><a  href="cart.html">
+               <li style="background-color:#048949;"><a  href="cart.html">
                  <i class="fas fa-cart-plus"></i> My Cart
-                 <span class="badge badge-green "> 3</span>
+                 <span class="badge badge-cart "> 10</span>
                </a></li>
              </ul>
            </div>
@@ -88,7 +88,7 @@
               <div class="carousel-caption" style="padding: -15px;">
                 <h3>New Collection</h3>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.  </p>
-                 <button class="btn btn-danger">SHOP NOW</button>
+                 <button class="btn btn-secondary btn-green">SHOP NOW</button>
               </div>
             </div>
             <div class="carousel-item" style="background-color:#F6BC00;">
@@ -96,7 +96,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h3>New Collection</h3>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.  </p>
-                 <button class="btn btn-danger">READ MORE</button>
+                 <button class="btn btn-secondary btn-green">READ MORE</button>
               </div>
             </div>
             <div class="carousel-item">
@@ -104,7 +104,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h3>New Collection</h3>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                 <button class="btn btn-danger">READ MORE</button>
+                 <button class="btn btn-secondary btn-green">READ MORE</button>
               </div>
             </div>
             <div class="carousel-item">
@@ -112,7 +112,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h3>New Collection</h3>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
-                 <button class="btn btn-danger">READ MORE</button>
+                 <button class="btn btn-secondary btn-green">READ MORE</button>
               </div>
             </div>
           </div>
@@ -131,15 +131,15 @@
 
 
     <br> <br>
-    <h2 class="text-center"><strong>PRODUCTS</strong></h2>
+    <h3 class="text-center"><strong>PRODUCTS</strong></h3>
     <br>
     <div class="row">
     <div class="col-md-4">
       <div class="card">
         <img class="card-img-top" src="img/electronics.jpg" alt="Card image cap">
-        <div class="card-body" style="background-color: #1E1E1E; opacity: 0.75;">
-          <h5 class="card-title" style="color: white;">Electronics</h5>
-          <p class="card-text" style="color: white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="card-body" >
+          <h5 class="card-title" style="color: #006837;">Electronics</h5>
+          <p class="card-text" >Some quick example text to build on the card title and make up the bulk of the card's content.</p>
            <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
         </div>
       </div>
@@ -147,9 +147,9 @@
     <div class="col-md-4">
       <div class="card">
         <img class="card-img-top" src="img/clothing.jpg" alt="Card image cap">
-        <div class="card-body" style="background-color: #1E1E1E; opacity: 0.75;">
-          <h5 class="card-title" style="color: white;">Clothing</h5>
-          <p class="card-text" style="color: white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="card-body" >
+          <h5 class="card-title" style="color: #006837;">Clothing</h5>
+          <p class="card-text" >Some quick example text to build on the card title and make up the bulk of the card's content.</p>
            <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
         </div>
       </div>
@@ -157,9 +157,9 @@
     <div class="col-md-4">
       <div class="card">
         <img class="card-img-top" src="img/sports.jpg" alt="Card image cap">
-        <div class="card-body"  style="background-color: #1E1E1E; opacity: 0.75;">
-          <h5 class="card-title" style="color: white;">Sports</h5>
-          <p class="card-text" style="color: white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="card-body" >
+          <h5 class="card-title" style="color: #006837;">Sports</h5>
+          <p class="card-text" >Some quick example text to build on the card title and make up the bulk of the card's content.</p>
            <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
         </div>
       </div>
@@ -169,9 +169,9 @@
     <div class="col-md-4">
       <div class="card">
         <img class="card-img-top" src="img/auto.jpg" alt="Card image cap">
-        <div class="card-body" style="background-color: #1E1E1E; opacity: 0.75;">
-          <h5 class="card-title" style="color: white;">Automotive</h5>
-          <p class="card-text" style="color: white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="card-body" >
+          <h5 class="card-title" style="color: #006837;">Automotive</h5>
+          <p class="card-text" >Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
         </div>
       </div>
@@ -179,9 +179,9 @@
     <div class="col-md-4">
       <div class="card">
         <img class="card-img-top" src="img/beuaty.jpg" alt="Card image cap">
-        <div class="card-body"  style="background-color: #1E1E1E; opacity: 0.75;">
-          <h5 class="card-title" style="color: white;">Beauty & Health</h5>
-          <p class="card-text" style="color: white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="card-body"  >
+          <h5 class="card-title" style="color: #006837;">Beauty & Health</h5>
+          <p class="card-text" >Some quick example text to build on the card title and make up the bulk of the card's content.</p>
            <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
         </div>
       </div>
@@ -189,9 +189,9 @@
     <div class="col-md-4">
       <div class="card" >
         <img class="card-img-top" src="img/toys.jpg" alt="Card image cap">
-        <div class="card-body" style="background-color: #1E1E1E; opacity: 0.75;">
-          <h5 class="card-title" style="color: white;">Toys, Kids & Baby</h5>
-          <p class="card-text" style="color: white;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="card-body">
+          <h5 class="card-title" style="color: #006837;">Toys, Kids & Baby</h5>
+          <p class="card-text" >Some quick example text to build on the card title and make up the bulk of the card's content.</p>
            <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
         </div>
       </div>
@@ -202,6 +202,171 @@
 
 
   </section>
+<br><br>
+  <section class="">
+<h3 class="text-center"><strong>FEATURED PRODUCTS</strong></h3>
+<br>
+     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+     <div class="container">
+     <div class="row">
+     <div class="col-md-12">
+       <div class="carousel-inner">
+      <div class="carousel-item active">
+      <div class="row">
+      <div class="col-md-3">
+        <div class="card" >
+    <img class="card-img-top" src="img/projectors.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title"  style="color: #006837;">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-secondary btn-green">Go somewhere</a>
+    </div>
+  </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card" >
+    <img class="card-img-top" src="img/projectors.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title"  style="color: #006837;">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-secondary btn-green">Go somewhere</a>
+    </div>
+  </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card" >
+    <img class="card-img-top" src="img/projectors.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title"  style="color: #006837;">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-secondary btn-green">Go somewhere</a>
+    </div>
+  </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card" >
+    <img class="card-img-top" src="img/projectors.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title"  style="color: #006837;">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-secondary btn-green">Go somewhere</a>
+    </div>
+  </div>
+      </div>
+
+   </div>
+      </div>
+      <div class="carousel-item">
+        <div class="row">
+      <div class="col-md-3">
+        <div class="card" >
+    <img class="card-img-top" src="img/projectors.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-secondary btn-green">Go somewhere</a>
+    </div>
+  </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card" >
+    <img class="card-img-top" src="img/projectors.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-secondary btn-green">Go somewhere</a>
+    </div>
+  </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card" >
+    <img class="card-img-top" src="img/projectors.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-secondary btn-green">Go somewhere</a>
+    </div>
+  </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="card" >
+    <img class="card-img-top" src="img/projectors.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-secondary btn-green">Go somewhere</a>
+    </div>
+  </div>
+      </div>
+
+   </div>
+      </div>
+      <div class="carousel-item">
+        <div class="row">
+      <div class="col-md-3">
+        <div class="card" >
+    <img class="card-img-top" src="img/projectors.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-secondary btn-green">Go somewhere</a>
+    </div>
+  </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card" >
+    <img class="card-img-top" src="img/projectors.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-secondary btn-green">Go somewhere</a>
+    </div>
+  </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card" >
+    <img class="card-img-top" src="img/projectors.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-secondary btn-green">Go somewhere</a>
+    </div>
+  </div>
+      </div>
+        <div class="col-md-3">
+        <div class="card" >
+    <img class="card-img-top" src="img/projectors.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-secondary btn-green">Go somewhere</a>
+    </div>
+  </div>
+      </div>
+   </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+     </div>
+
+     </div>
+
+     </div>
+
+  </div>
+
+  </section>
+
+  <br><br>
+  <!--
       <section>
   	    <div class="container">
           <div class="col">
@@ -250,7 +415,7 @@
   				</div>
         </div>
   		</div>
-      </section>
+    </section>-->
     </main>
   </body>
   <footer class="text-light">
