--- a/products.html
+++ b/products.html
@@ -25,11 +25,11 @@
 									<a class="" href="#"><i class="fas fa-user" aria-hidden="true"></i> My Account</a>
 								</li>
 								<li class="dropdown">
-									<a class="" href="login.html"> Login/Register</a>
+									<a class="" href="login.html"> Login/Register </a>
 								</li>
-								<li><a  href="cart.html">
+								<li style="background-color:#048949;"><a  href="cart.html">
 									<i class="fas fa-cart-plus"></i> Cart
-									<span class="badge badge-green">3</span>
+									<span class="badge badge-cart">10</span>
 								</a></li>
 							</ul>
 						</div>
@@ -73,7 +73,7 @@
 			</div>
 		</nav>
 		<main >
-		
+
 			<section class="wrap" >
 				<br>
 				<div class="container ">
@@ -109,7 +109,7 @@
 								<div class="panel-body" >
 									<div class="panel-heading " >
 										<li class="list-group-item"><a data-toggle="collapse" href="#collapse0" style=" color:#6c757d;">
-											Price	<i style="color:#00BCD4;" class="indicator fa fa-caret-down"  aria-hidden="true"></i>
+											Price	<i style="color:#006837;" class="indicator fa fa-caret-down"  aria-hidden="true"></i>
 										</a></li>
 									</div>
 									<div id="collapse0" class="panel-collapse collapse in" >
