--- a/register-login.html
+++ b/register-login.html
@@ -34,9 +34,9 @@
                <li class="dropdown">
                  <a class="" href="#"> Login/Register</a>
                </li>
-               <li><a  href="cart.html">
+               <li style="background-color:#048949;"><a  href="cart.html">
                  <i class="fas fa-cart-plus"></i> Cart
-                 <span class="badge badge-green">3</span>
+                 <span class="badge  badge-cart ">10</span>
                </a></li>
 
 
