color botones carrousel principal

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <div class="carousel-caption" style="padding: -15px;">
                 <h3>New Collection</h3>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.  </p>
-                 <button class="btn btn-secondary btn-green">SHOP NOW</button>
+                 <button class="btn btn-secondary btn-info">SHOP NOW</button>
               </div>
             </div>
             <div class="carousel-item" style="background-color:#F6BC00;">
@@ -96,7 +96,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h3>New Collection</h3>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.  </p>
-                 <button class="btn btn-secondary btn-green">READ MORE</button>
+                 <button class="btn btn-secondary btn-info">READ MORE</button>
               </div>
             </div>
             <div class="carousel-item">
@@ -104,7 +104,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h3>New Collection</h3>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                 <button class="btn btn-secondary btn-green">READ MORE</button>
+                 <button class="btn btn-secondary btn-warning">READ MORE</button>
               </div>
             </div>
             <div class="carousel-item">
@@ -112,7 +112,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h3>New Collection</h3>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
-                 <button class="btn btn-secondary btn-green">READ MORE</button>
+                 <button class="btn btn-secondary btn-warning">READ MORE</button>
               </div>
             </div>
           </div>
