--- a/index.html
+++ b/index.html
@@ -8,8 +8,49 @@
     <link rel="stylesheet" href="css/styles.css"/> <!--enlace de hoja de estilos -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+
+
+    <!--Boostrap JQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!--Boostrap JS Para animaciones-->
+    <script src="js/bootstrap.min.js"></script>
+    <!--Listas-->
+    <script src="js/Lists.js"></script>
+    <!-- font Awesome -->
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <!-- *****************************************Angular Librerías***************************************** -->
+    <script src="js/angular.js"></script>
+    <script src="js/angular-drag-and-drop-lists.js"></script>
+    <script src="js/angular-animate.js"></script>
+    <script src="js/angular-sanitize.js"></script>
+    <script src="js/angular-filter.min.js"></script>
+    <!-- *****************************************Boostrap Angular Librerías***************************************** -->
+    <script src="js/ui-bootstrap-tpls-2.5.0.js"></script>
+    <!-- *****************************************Código de Select Boostrap Angular***************************************** -->
+    <script src="./select.js"></script>
+    <link rel="stylesheet" href="./select.css">
+    <script src="./demo.js"></script>
+    <!-- *****************************************Librería de angular loading***************************************** -->
+    <script src="js/spin.min.js"></script>
+    <script src="js/angular-loading.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/angular-loading.css" />
+    <!-- *****************************************Librería de angular tags inputs***************************************** -->
+    <script src="js/ng-tags-input.min.js"></script>
+    <!-- *****************************************Librería de file upload***************************************** -->
+    <script src="js/angular-file-upload.min.js"></script>
+    <!-- *****************************************Librería de boostrap toogle ***************************************** -->
+    <script src="js/angular-bootstrap-toggle.min.js"></script>
+    <!-- *****************************************Librería de controlador principal***************************************** -->
+    <script src="js/controller.js"></script>
+    <!-- *****************************************Alertas***************************************** -->
+    <link rel="stylesheet" type="text/css" href="https://ptreesys.mx/sharedfiles/src/sweetalert.css">
+    <script src="https://ptreesys.mx/sharedfiles/src/sweetalert.min.js"></script>
+    <!-- Pattern -->
+    <script src="js/ng-pattern-restrict.js"></script>
+
   </head>
-  <body>
+  <body  ng-controller="ctrlCubeShopHomeController" >
     <nav class="top-menu  sticky-top">
       <div class="container">
         <div class="row">
@@ -133,71 +174,19 @@
     <br> <br>
     <h3 class="text-center"><strong>PRODUCTS</strong></h3>
     <br>
-    <div class="row">
-    <div class="col-md-4">
-      <div class="card">
-        <img class="card-img-top" src="img/electronics.jpg" alt="Card image cap">
-        <div class="card-body" >
-          <h5 class="card-title" style="color: #006837;">Electronics</h5>
-          <p class="card-text" >Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-           <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
+
+    <div class="row" ng-repeat="(key, value) in ProductCards | groupBy: 'Fila'">
+      <div class="col-md-4" ng-repeat="ProductCardsItem in value">
+        <div class="card">
+          <img class="card-img-top" ng-src="{{'/'+ ProductCardsItem.GROUPIMG}}" alt="Card image cap">
+          <div class="card-body" >
+            <h5 class="card-title" style="color: #006837;">{{ProductCardsItem.NAME}}</h5>
+            <p class="card-text" >{{ProductCardsItem.DESCRIPTION}}</p>
+             <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="card">
-        <img class="card-img-top" src="img/clothing.jpg" alt="Card image cap">
-        <div class="card-body" >
-          <h5 class="card-title" style="color: #006837;">Clothing</h5>
-          <p class="card-text" >Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-           <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card">
-        <img class="card-img-top" src="img/sports.jpg" alt="Card image cap">
-        <div class="card-body" >
-          <h5 class="card-title" style="color: #006837;">Sports</h5>
-          <p class="card-text" >Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-           <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4">
-      <div class="card">
-        <img class="card-img-top" src="img/auto.jpg" alt="Card image cap">
-        <div class="card-body" >
-          <h5 class="card-title" style="color: #006837;">Automotive</h5>
-          <p class="card-text" >Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card">
-        <img class="card-img-top" src="img/beuaty.jpg" alt="Card image cap">
-        <div class="card-body"  >
-          <h5 class="card-title" style="color: #006837;">Beauty & Health</h5>
-          <p class="card-text" >Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-           <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card" >
-        <img class="card-img-top" src="img/toys.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title" style="color: #006837;">Toys, Kids & Baby</h5>
-          <p class="card-text" >Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-           <a href="products.html"><button type="button" class="btn btn-secondary btn-green">+ See more</button> </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
 
 
 
