--- a/login.html
+++ b/login.html
@@ -45,48 +45,48 @@
          </div>
        </div>
      </nav>
-     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-     <div class="container">
-     <!-- Brand/logo -->
-      <a class="navbar-brand" href="#"><img src="img/logo-cube-mia.png" style="max-width:130px;" /></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-center"  id="navbarsExampleDefault">
+		 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+       <div class="container">
+         <!--logo -->
+         <a class="navbar-brand" href="#"><img src="img/logo-cube-mia.png" style="max-width:130px;" /></a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse justify-content-center"  id="navbarsExampleDefault">
+           <form style="">
+             <div class="row" style="margin-top:10px;">
+               <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                 <div class="input-group input-group-sm">
+                   <input style="border-radius:0;" type="text" class="form-control" aria-label="Small" placeholder="Search...">
+                   <div class="input-group-append">
+                     <button type="button" class="btn btn-secondary" style="border-radius:0;">
+                       <i class="fa fa-search"></i>
+                     </button>
+                   </div>
+                 </div>
+               </div>
+             </div>
+             <!-- Links -->
+             <ul class="navbar-nav m-auto" >
+               <li class="nav-item">
+                 <a class="nav-link  active" href="index.html">HOME <span class="sr-only">(current)</span></a>
+               </li>
+               <li class="nav-item">
+                 <a class="nav-link " href="products.html">PRODUCTS</a>
+               </li>
+               <li class="nav-item">
+                 <a class="nav-link" href="#">SERVICES </a>
+               </li>
+               <li class="nav-item">
+                 <a class="nav-link" href="#">APPLICATIONS</a>
+               </li>
+             </ul>
+           </form>
 
-        <!-- Links -->
-        <ul class="navbar-nav m-auto">
-         <li class="nav-item">
-           <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
-         </li>
-         <li class="nav-item">
-          <a class="nav-link " href="products.html">PRODUCTS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">SERVICES </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">APPLICATIONS</a>
-        </li>
 
-      </ul>
-      <form class="form-inline my-3 my-lg-0">
-        <div class="input-group input-group-sm">
-          <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Search...">
-          <div class="input-group-append">
-            <button type="button" class="btn btn-secondary ">
-              <i class="fa fa-search"></i>
-            </button>
-          </div>
-        </div>
-
-      </form>
-
-    </div>
-
-     </div>
-
-  </nav>
+         </div>
+       </div>
+     </nav>
 
 <main class="wrap">
 	<div class="container">
